Bootstrap/Material Design coming together

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="proximitymap-bootstrap.css">
 		<link rel="shortcut icon" href="">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 	</head>
 	<body>
@@ -32,36 +33,39 @@
       <!-- Example row of columns -->
       <div class="row">
 	    <div class="col-md-12 material-box">
-	      <h2>Heading</h2>
+	      <h2>Waiting Zone</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
 	    </div>
       </div>
       <div class="row">
 	    <div class="col-md-12 material-box">
-	      <h2>Heading</h2>
+	      <h2>Story</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
 	    </div>
       </div>
       <div class="row">
         <div class="col-md-4">
          <div class="material-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Zone 1</h2>
+          <div class="zone">
+          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+      	  </div>
          </div>
         </div>
         <div class="col-md-4">
          <div class="material-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Zone 2</h2>
+          <div class="zone">
+          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+      	  </div>
          </div>
         </div>
         <div class="col-md-4">
          <div class="material-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Zone 3</h2>
+          <div class="zone">
+          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+      	  </div>
          </div>
         </div>
       </div>
@@ -69,16 +73,18 @@
 	  <div class="row">
         <div class="col-md-6">
          <div class="material-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Zone 5</h2>
+          <div class="zone">
+          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+      	  </div>
          </div>
         </div>
         <div class="col-md-6">
          <div class="material-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Zone 6</h2>
+          <div class="zone">
+          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+      	  </div>
          </div>
         </div>
       </div>
