--- a/bootstrap.html
+++ b/bootstrap.html
@@ -33,14 +33,14 @@
       <!-- Example row of columns -->
       <div class="row">
 	    <div class="col-md-12 material-box">
-	      <h2>Waiting Zone</h2>
+	      <h2>Recent Updates</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
 	    </div>
       </div>
       <div class="row">
 	    <div class="col-md-12 material-box">
-	      <h2>Story</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+	      <a class="floating-head" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
+	      <a class="floating-head" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
 	    </div>
       </div>
       <div class="row">
@@ -48,7 +48,10 @@
          <div class="material-box">
           <h2>Zone 1</h2>
           <div class="zone">
-          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<a class="floating-head hover-head centre" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
+
+          	<a class="floating-head hover-head centre" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
       	  </div>
          </div>
         </div>
@@ -56,7 +59,7 @@
          <div class="material-box">
           <h2>Zone 2</h2>
           <div class="zone">
-          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
         </div>
@@ -64,7 +67,7 @@
          <div class="material-box">
           <h2>Zone 3</h2>
           <div class="zone">
-          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
         </div>
@@ -75,7 +78,7 @@
          <div class="material-box">
           <h2>Zone 5</h2>
           <div class="zone">
-          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
         </div>
@@ -83,7 +86,7 @@
          <div class="material-box">
           <h2>Zone 6</h2>
           <div class="zone">
-          	<div class="centre"><i class="pulse fa fa-map-marker fa-2x"></i></div>
+          	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
         </div>
