Creating module functions
Hopefully this will be more sustainable then the mismash of jquery
rubbish I had before

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -38,7 +38,7 @@
 	    </div>
       </div>
       <div class="row">
-	    <div class="col-md-12 material-box">
+	    <div id="waiting-zone" class="col-md-12 material-box waiting-zone">
 	      <a class="floating-head" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
 	      <a class="floating-head" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
 	    </div>
@@ -96,5 +96,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+	<script src="src/app.js"></script>
+	<script src="src/beacon.js"></script>
+	<script src="src/zone.js"></script>
+	<script src="demo.js"></script>
 	</body>
 </html>
