More extensions to the base classes
Doing a few things at the same time but trying to piece it all together.
Seem to be falling into place and making sense what needs to be done.

This is obviously slower the mashing it together in jquery but this
seems way cleaner and easier to understand

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -47,11 +47,8 @@
         <div class="col-md-4">
          <div class="material-box">
           <h2>Zone 1</h2>
-          <div class="zone">
+          <div class="zone" id="z1">
           	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
-          	<a class="floating-head hover-head centre" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
-
-          	<a class="floating-head hover-head centre" href="#"><img src="http://imgsrc.hubblesite.org/hu/db/images/hs-1994-02-c-thumb.jpg"></a>
       	  </div>
          </div>
         </div>
