--- a/bootstrap.html
+++ b/bootstrap.html
@@ -95,7 +95,8 @@
 
 	<script src="src/app.js"></script>
 	<script src="src/beacon.js"></script>
-	<script src="src/zone.js"></script>
+  <script src="src/zone.js"></script>
+	<script src="src/radiuszone.js"></script>
 	<script src="demo.js"></script>
 	</body>
 </html>
