Adding mock zones to app
Once again these will eventually be added by a webservice and also the
dom items will be generated

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -55,7 +55,7 @@
         <div class="col-md-4">
          <div class="material-box">
           <h2>Zone 2</h2>
-          <div class="zone">
+          <div class="zone" id="z2">
           	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
@@ -63,7 +63,7 @@
         <div class="col-md-4">
          <div class="material-box">
           <h2>Zone 3</h2>
-          <div class="zone">
+          <div class="zone" id="z3">
           	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
@@ -73,16 +73,16 @@
 	  <div class="row">
         <div class="col-md-6">
          <div class="material-box">
-          <h2>Zone 5</h2>
-          <div class="zone">
+          <h2>Zone 4</h2>
+          <div class="zone" id="z4">
           	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
         </div>
         <div class="col-md-6">
          <div class="material-box">
-          <h2>Zone 6</h2>
-          <div class="zone">
+          <h2>Zone 5</h2>
+          <div class="zone" id="z5">
           	<div class="centre marker-offset"><i class="pulse fa fa-map-marker fa-2x"></i></div>
       	  </div>
          </div>
