--- a/bootstrap.html
+++ b/bootstrap.html
@@ -34,7 +34,9 @@
       <div class="row">
 	    <div class="col-md-12 material-box">
 	      <h2>Recent Updates</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+          <ul id="story">
+
+          </ul>
 	    </div>
       </div>
       <div class="row">
@@ -91,10 +93,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+  <script src="lib/moment.min.js"></script>
+  <script src="lib/livestamp.min.js"></script>
+
 	<script src="src/app.js"></script>
 	<script src="src/beacon.js"></script>
   <script src="src/zone.js"></script>
-	<script src="src/radiuszone.js"></script>
+  <script src="src/radiuszone.js"></script>
+	<script src="src/story.js"></script>
 	<script src="demo.js"></script>
 	</body>
 </html>
