--- a/bootstrap.html
+++ b/bootstrap.html
@@ -34,7 +34,7 @@
       <div class="row">
 	    <div class="col-md-12 material-box">
 	      <h2>Recent Updates</h2>
-          <ul id="story">
+          <ul id="story" class="story">
 
           </ul>
 	    </div>
